additional configuration refactoring